# GameofLife-OpenMP

./: CMakeLists.txt  GoLParallel.cpp  GoLSerial.cpp  README.md  RandomFileMaker.cpp
